Update Node dependencies

--- a/package.json
+++ b/package.json
@@ -22,119 +22,119 @@
     "translation:translate": "export $(grep -v '^#' .env | xargs -d '\n') && ts-node translation/translate.ts && pnpm translation:compile"
   },
   "dependencies": {
-    "@contentful/rich-text-plain-text-renderer": "^15.12.1",
-    "@contentful/rich-text-react-renderer": "^15.12.1",
-    "@floating-ui/react-dom-interactions": "^0.9.3",
-    "@formatjs/cli-lib": "^6.3.6",
+    "@contentful/rich-text-plain-text-renderer": "^17.1.0",
+    "@contentful/rich-text-react-renderer": "^16.1.0",
+    "@floating-ui/react-dom-interactions": "^0.13.3",
+    "@formatjs/cli-lib": "^7.4.2",
     "@formkit/auto-animate": "1.0.0-beta.6",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@hookform/resolvers": "^2.9.10",
-    "@lottiefiles/dotlottie-react": "^0.14.0",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
+    "@hookform/resolvers": "^5.1.1",
+    "@lottiefiles/dotlottie-react": "^0.14.4",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@nivo/core": "^0.80.0",
-    "@nivo/line": "^0.80.0",
-    "@prisma/client": "5.6.0",
-    "@react-spring/web": "^9.5.5",
-    "@tanstack/react-query": "^4.18.0",
-    "@trpc/client": "10.44.1",
-    "@trpc/next": "10.44.1",
-    "@trpc/react-query": "10.44.1",
-    "@trpc/server": "10.44.1",
-    "axios": "^0.27.2",
-    "bcryptjs": "^2.4.3",
-    "classnames": "^2.3.2",
-    "contentful": "^9.2.11",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@nivo/core": "^0.99.0",
+    "@nivo/line": "^0.99.0",
+    "@prisma/client": "6.12.0",
+    "@react-spring/web": "^10.0.1",
+    "@tanstack/react-query": "^5.83.0",
+    "@trpc/client": "11.4.3",
+    "@trpc/next": "11.4.3",
+    "@trpc/react-query": "11.4.3",
+    "@trpc/server": "11.4.3",
+    "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
+    "classnames": "^2.5.1",
+    "contentful": "^11.7.12",
     "crypto-js": "^4.2.0",
-    "decimal.js": "^10.4.2",
-    "discord.js": "14.11.0",
-    "form-data": "^4.0.0",
-    "fuse.js": "^6.6.2",
-    "glob": "^8.0.3",
-    "http-status-codes": "^2.2.0",
-    "luxon": "^3.2.1",
-    "mailgun.js": "^8.0.2",
-    "mjml": "^4.13.0",
-    "next": "14.2.25",
-    "next-auth": "^4.23.2",
+    "decimal.js": "^10.6.0",
+    "discord.js": "14.21.0",
+    "form-data": "^4.0.4",
+    "fuse.js": "^7.1.0",
+    "glob": "^11.0.3",
+    "http-status-codes": "^2.3.0",
+    "luxon": "^3.7.1",
+    "mailgun.js": "^12.0.3",
+    "mjml": "^4.15.3",
+    "next": "15.4.4",
+    "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
-    "next-seo": "^5.14.1",
-    "nodemailer": "^6.8.0",
-    "react": "18.2.0",
-    "react-cookie": "^4.1.1",
-    "react-dom": "18.2.0",
-    "react-error-boundary": "^3.1.4",
-    "react-highlight-words": "^0.18.0",
-    "react-hook-form": "^7.39.4",
+    "next-seo": "^6.8.0",
+    "nodemailer": "^7.0.5",
+    "react": "19.1.0",
+    "react-cookie": "^8.0.1",
+    "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.0",
+    "react-highlight-words": "^0.21.0",
+    "react-hook-form": "^7.61.1",
     "react-intl": "^7.1.11",
-    "react-modal": "^3.16.1",
-    "react-qr-code": "^2.0.8",
-    "react-select": "^5.6.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-toastify": "^9.1.1",
+    "react-modal": "^3.16.3",
+    "react-qr-code": "^2.0.18",
+    "react-select": "^5.10.2",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-toastify": "^11.0.5",
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.3.0",
-    "sass": "^1.56.1",
-    "sharp": "^0.34.1",
+    "sass": "^1.89.2",
+    "sharp": "^0.34.3",
     "snoowrap": "^1.23.0",
-    "superjson": "^1.11.0",
-    "tailwindcss": "^3.4.0",
-    "ts-morph": "^21.0.1",
-    "zod": "^3.22.4",
-    "zustand": "4.1.1"
+    "superjson": "^2.2.2",
+    "tailwindcss": "^3.4.17",
+    "ts-morph": "^26.0.0",
+    "zod": "^3.25.76",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@axe-core/react": "4.4.4",
-    "@contentful/rich-text-types": "^15.14.0",
-    "@faker-js/faker": "^7.6.0",
-    "@tailwindcss/typography": "^0.5.8",
-    "@testing-library/dom": "^8.19.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.1.2",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/crypto-js": "^4.1.1",
-    "@types/glob": "^8.0.0",
-    "@types/jest": "^29.2.3",
-    "@types/luxon": "^3.1.0",
-    "@types/mailchimp__mailchimp_marketing": "^3.0.6",
-    "@types/mjml": "^4.7.0",
-    "@types/node": "^20.9.0",
-    "@types/nodemailer": "^6.4.6",
-    "@types/react": "18.0.18",
-    "@types/react-gtm-module": "^2.0.1",
-    "@types/react-highlight-words": "^0.16.4",
-    "@types/react-modal": "^3.13.1",
-    "@types/react-syntax-highlighter": "^15.5.5",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.2.25",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^27.6.1",
-    "eslint-plugin-prettier": "^5.1.2",
-    "husky": "^8.0.2",
+    "@axe-core/react": "4.10.2",
+    "@contentful/rich-text-types": "^17.1.0",
+    "@faker-js/faker": "^9.9.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/glob": "^9.0.0",
+    "@types/jest": "^30.0.0",
+    "@types/luxon": "^3.6.2",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.21",
+    "@types/mjml": "^4.7.4",
+    "@types/node": "^24.1.0",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "19.1.8",
+    "@types/react-gtm-module": "^2.0.4",
+    "@types/react-highlight-words": "^0.20.0",
+    "@types/react-modal": "^3.16.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "9.31.0",
+    "eslint-config-next": "15.4.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-prettier": "^5.5.3",
+    "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "lint-staged": "^13.0.3",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prisma": "5.6.0",
-    "tailwind-scrollbar": "^3.0.4",
-    "ts-node": "^10.9.1",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
+    "lint-staged": "^16.1.2",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prisma": "6.12.0",
+    "tailwind-scrollbar": "^4.0.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.8.3"
   },
   "optionalDependencies": {
-    "contentful-management": "^10.20.1",
-    "contentful-typescript-codegen": "^3.2.3"
+    "contentful-management": "^11.54.3",
+    "contentful-typescript-codegen": "^3.4.0"
   },
   "engines": {
     "pnpm": ">=9.11.0",
